# as-coach

./: README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  pytest.ini  Диаграмма без названия.drawio
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  mypy.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 2023-03-31_gender_and_user_field.py  2023-03-31_init_migration.py  2023-04-01_user_and_customer_init.py  2023-04-03_added_user_columns.py  2023-04-10_init_gym.py  2023-04-14_rename_column_to_diet_id.py  2023-04-16_muscle_group_model.py  2023-04-16_not_nullable_muscle_id.py  2023-04-17_extend_training_plan.py  2023-04-17_insert_exercises.py  2023-04-20_username_to_customer.py  2023-04-21_added_fields_to_customer.py  2023-04-25_superset_id_column.py  2023-05-28_add_ordering_field.py  2023-05-29_add_relationship_with_coach.py  2023-05-29_create_coach_table.py  2023-05-29_remove_relationship_with_user.py  2023-07-18_exercises_on_training_cascade_delete.py  2023-07-18_training_plan_cascade_delete.py  2023-07-22_customer_cascade_delete.py  2023-07-25_diet_cascade_delete.py  2023-08-03_init_squashed_migration.py
backend/docs/: 1_customer_ordering.md  2_register_coach_customer_.md  3_user_login.md  4_nutrition_domain.md  nutrition_diagram.drawio  Диаграмма без названия.drawio
backend/extra/: create_training_plan_in.json  get_daily_diet_for_customer_by_date.json  get_daily_diet_for_customer_by_date_out.json  get_nutrition_diets_for_customer_by_date.json  get_products_lookup_out.json  get_receive_product.json  get_receive_product_out.json  post_add_product_to_diet_in.json  post_add_product_to_diet_out.json  post_add_product_to_diet_response.json  post_create_product.json  post_create_product_in.json  specified_training_plan_out.json  training_plan_in.json  training_plan_out.json
backend/migrations/: env.py
backend/src/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  utils.py
backend/src/auth/: config.py  models.py  (+5 more)
backend/tests/: conftest.py  fixtures.py  mocks.py  tests.py
(+382 files in other folders)
