[tool.poetry]
name = "as-coach"
version = "0.1.0"
description = ""
authors = ["v.baydin <v.baydin@samolet.ru>"]
readme = "README.md"
packages = [{include = "as-coach"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
alembic = "^1.9.4"
psycopg2 = "^2.9.5"
httpx = "^0.23.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"
mypy = "^1.0.1"
isort = "^5.12.0"
types-python-jose = "^3.3.4.5"
types-passlib = "^1.7.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
