[tool.poetry]
name = "as-coach"
version = "0.1.0"
description = ""
authors = ["v.baydin <v.baydin@samolet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
httpx = "^0.23.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.24.0"
sqlalchemy = "^1.4.22"
alembic = "^1.10.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"
mypy = "^1.0.1"
isort = "^5.12.0"
types-python-jose = "^3.3.4.5"
types-passlib = "^1.7.7.10"
python-multipart = "^0.0.6"
sqlalchemy-stubs = "^0.4"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
